# ceml

./: .gitignore  README.rst  pyproject.toml  requirements.txt  ruff.toml
ceml/: __init__.py
ceml/backend/numpy/: __init__.py  layer.py
ceml/backend/numpy/costfunctions/: costfunctions.py  losses.py
ceml/backend/torch/: __init__.py  layer.py
ceml/backend/torch/costfunctions/: costfunctions.py  losses.py
ceml/backend/torch/optimizer/: optimizer.py
ceml/costfunctions/: costfunctions.py
ceml/model/: __init__.py  counterfactual.py  model.py
ceml/optim/: __init__.py  cvx.py  ga.py  input_wrapper.py  optimizer.py
ceml/sklearn/: __init__.py  counterfactual.py  decisiontree.py  isolationforest.py  knn.py  lda.py  linearregression.py  models.py  naivebayes.py  plausibility.py  qda.py  randomforest.py  softmaxregression.py  tree.py  utils.py
ceml/torch/: counterfactual.py  utils.py
tests/sklearn/: test_sklearn_softmaxregression.py
